# drishti-ai

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  sabnetra.bat  setup.py  test_webcam.py
sabnetra_ai/: __init__.py  __main__.py  cli.py  config.py
sabnetra_ai/core/: __init__.py  alert_system.py  cross_camera.py  detector.py  embedding_memory.py  feature_extractor.py  frame_buffer.py  matcher.py  state_engine.py  suspect_manager.py  tracker.py
sabnetra_ai/enrollment/: __init__.py  fir_module.py
sabnetra_ai/models/: model_manager.py
sabnetra_ai/pipeline/: __init__.py  orchestrator.py
sabnetra_ai/stream/: __init__.py  rtsp_manager.py
sabnetra_ai/utils/: __init__.py  config_loader.py  geometry.py  helpers.py  persistence.py  serializers.py
scripts/: run_api.py  run_camera.py  run_video.py
tests/: test_alert_system.py  test_api.py  test_cli.py  test_config.py  test_config_loader.py  test_cross_camera.py  test_detector.py  test_embedding_memory.py  test_feature_extractor.py  test_fir_module.py  test_frame_buffer.py  test_geometry.py  test_helpers.py  test_matcher.py  test_model_manager.py  test_orchestrator.py  test_persistence.py  test_rtsp_manager.py  test_serializers.py  test_state_engine.py  test_suspect_manager.py  test_tracker.py
