[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sabnetra_ai"
version = "2.0.0"
description = "CCTV-first real-time surveillance intelligence system for suspect detection, tracking, and cross-camera identity recognition."
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "ultralytics>=8.0.0",
    "scipy>=1.10.0",
    "faiss-cpu>=1.7.0",
    "insightface>=0.7.0",
    "onnxruntime>=1.15.0",
    "cryptography>=41.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "websockets>=11.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
reid = ["torchreid>=1.4.0"]
gait = ["opengaitext>=0.1.0"]
full = ["torchreid>=1.4.0", "opengaitext>=0.1.0"]

[project.scripts]
sabnetra = "sabnetra_ai.cli:main"

[tool.setuptools.packages.find]
include = ["sabnetra_ai*"]
